@@ -1,7 +1,6 @@
 #!/usr/bin/env python
 # Shine.Configuration.Model test suite
-# Copyright (C) 2009-2011 CEA
-# $Id$
+# Copyright (C) 2009-2014 CEA
 
 
 """Unit test for Model"""
@@ -75,28 +74,77 @@ nid_map: nodes=foo[7] nids=foo[7]@tcp""")
         self.assertEqual(model.elements('nid_map')[1].as_dict(),
                 { 'nodes': 'foo[7]', 'nids': 'foo[7]@tcp' })
 
-    def testMatchDevice(self):
-        model = self.makeTempModel("""fs_name: nids
+    def test_match_device_ignore_index(self):
+        """test match_device() does not try to match index property"""
+        model = Model()
+        model.parse("""fs_name: nids
 nid_map: nodes=foo[7] nids=foo[7]@tcp
-mgt: node=foo7""")
+ost: node=foo7 index=0""")
         candidate = [ {'node': 'foo7', 'dev': '/dev/sda'} ]
-        matched = model.get('mgt')[0].match_device(candidate)
+        matched = model.get('ost')[0].match_device(candidate)
         self.assertEqual(len(matched), 1)
         self.assertEqual(matched[0].get('dev'), '/dev/sda')
 
-    def testMatchDeviceError(self):
-        model = self.makeTempModel("""fs_name: nids
+    def test_match_device_error(self):
+        model = Model()
+        model.parse("""fs_name: nids
 nid_map: nodes=foo[7] nids=foo[7]@tcp
 mgt: node=(\<badregexp>""")
         candidate = [ {'node': 'foo7', 'dev': '/dev/sda'} ]
         self.assertRaises(ModelFileValueError, model.get('mgt')[0].match_device,
                 candidate)
 
+    def test_match_device_missing_prop(self):
+        """check missing property does not match in match_device()"""
+        model = Model()
+        model.parse("""fs_name: nids
+nid_map: nodes=foo[7] nids=foo[7]@tcp
+mgt: node=foo7 network=tcp""")
+        candidate = [ {'node': 'foo7', 'dev': '/dev/sda'} ]
+        self.assertEqual(len(model.get('mgt')[0].match_device(candidate)), 0)
+
     def test_several_spaces(self):
-        model = self.makeTempModel("""fs_name:  spaces 
+        model = Model()
+        model.parse("""fs_name:  spaces 
 nid_map:  nodes=foo[7]  nids=foo[7]@tcp
 mgt:  node=foo7 """)
         self.assertEqual(model.get('fs_name'), 'spaces')
         self.assertEqual(len(model.elements('nid_map')), 1)
         self.assertEqual(model.elements('nid_map')[0].as_dict(),
                 { 'nodes': 'foo[7]', 'nids': 'foo[7]@tcp' })
+
+    def test_diff_ost(self):
+        """check diff detects updated targets."""
+        model = Model()
+        model.parse("""fs_name: diff
+nid_map: nodes=foo1 nids=foo1@tcp
+ost: node=foo1 dev=/dev/sda
+ost: node=foo1 dev=/dev/sdc mode=external """)
+
+        new_m = Model()
+        new_m.parse("""fs_name: diff
+nid_map: nodes=foo1 nids=foo1@tcp
+ost: node=foo1 dev=/dev/sdc jdev=/dev/sdd """)
+
+        added, changed, removed = model.diff(new_m)
+        self.assertEqual(len(added), 0)
+        self.assertEqual(str(removed), "ost:node=foo1 dev=/dev/sda")
+        self.assertEqual(str(changed),
+                                    "ost:node=foo1 dev=/dev/sdc jdev=/dev/sdd")
+
+    def test_diff_client(self):
+        """check diff detects updated clients."""
+        model = Model()
+        model.parse("""fs_name: diff
+nid_map: nodes=foo1 nids=foo1@tcp
+client: node=foo1""")
+
+        new_m = Model()
+        new_m.parse("""fs_name: diff
+nid_map: nodes=foo1 nids=foo1@tcp
+client: node=foo1 mount_options=ro""")
+
+        added, changed, removed = model.diff(new_m)
+        self.assertEqual(len(added), 0)
+        self.assertEqual(len(removed), 0)
+        self.assertEqual(str(changed), "client:node=foo1 mount_options=ro")
