@@ -1,3 +1,6 @@
+2014-06-10 Aurelien Degremont <aurelien.degremont@cea.fr>
+	* Correctly detect target updates in model file (ticket #180)
+
 2014-04-15 Kilian Cavalotti <kilian@stanford.edu>
 	* Support hexadecimal indexes in model files (ticket #179)
 
